feat: implement javafmt-intellij ExternalFormatProcessor plugin